--- a/Flow.Plugin.VSCodeWorkspaces.csproj
+++ b/Flow.Plugin.VSCodeWorkspaces.csproj
@@ -13,6 +13,7 @@
 		<LangVersion>latest</LangVersion>
 		<Nullable>warnings</Nullable>
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
 		<DebugSymbols>true</DebugSymbols>
