--- a/Flow.Plugin.VSCodeWorkspaces.csproj
+++ b/Flow.Plugin.VSCodeWorkspaces.csproj
@@ -1,6 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>net6.0-windows</TargetFramework>
+		<TargetFramework>net7.0-windows</TargetFramework>
 		<ProjectGuid>{4D971245-7A70-41D5-BAA0-DDB5684CAF51}</ProjectGuid>
 		<AppDesignerFolder>Properties</AppDesignerFolder>
 		<RootNamespace>Flow.Plugin.VSCodeWorkspaces</RootNamespace>
@@ -44,7 +44,7 @@
 		</Content>
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Flow.Launcher.Plugin" Version="3.0.0" />
+		<PackageReference Include="Flow.Launcher.Plugin" Version="4.0.1" />
 		<PackageReference Include="JetBrains.Annotations" Version="2022.3.1" />
 		<PackageReference Include="System.Drawing.Common" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.1" />
